changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Pass an empty string rather than NULL to command_function if no parameters
are given.
Andreas Kirschbaum 2009-12-20

server/c_misc.c:  Fix overflow in showing how much time character has been
   played - use 64 bit interim values.
MSW 2009-12-12

Prevent DMs from using 'quit', else they aren't actually deleted.
Nicolas Weeger 2009-12-12

Try to fix disappearing dragon abilities when converting to a god.
Nicolas Weeger 2009-12-12

Track how many ticks the character has been played.  Piece of information
tracking easy to add in.  Output is shown in the statistics command.
MSW 2009-12-07

Send 'pickup' update to clients requesting it when the player
uses the 'pickup' command directly.
Nicolas Weeger 2009-12-06

Honore the 'NO_PICK' flag for generated BOOKS even if empty.
Nicolas Weeger 2009-12-05

test/unit/common/check_time.c: Remove apparent debugging output which doesn't
	really belong.
MSW 2009-12-01

Fix some crashes on malformed input in alchemy loading code.
Arvid Norlander 2009-11-29

Fix potential NULL dereference in poisoning code in server/attack.c.
Arvid Norlander 2009-11-28

Implement proper error handling on malformed regions file. Also added a
new fatal() message to refer to the last error (used in region parsing,
will be used elsewhere soon too).
Arvid Norlander 2009-11-28

Fix a potential NULL dereference due to passing a potential NULL pointer to
qsort().
Arvid Norlander 2009-11-28

Fix uninitialised value on a empty attackmess file. The issue should never
happen in practice however.
Arvid Norlander 2009-11-28
