@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix monster_compute_path.
+Nicolas Weeger 2009-12-12
+
 Pass an empty string rather than NULL to command_function if no parameters
 are given.
 Andreas Kirschbaum 2009-12-20
